--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">TravelGuide</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="current_location">Current Location</string>
 </resources>
