--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="add_guide">Add Guide</string>
     <string name="add_text">Add text</string>
     <string name="add_location">Add Location</string>
+    <string name="empty_text">The text field is empty</string>
+    <string name="no_locattion">No location has been selected</string>
 </resources>
