--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="log_in">Log in</string>
     <string name="empty_fields">Fields are empty</string>
     <string name="sign_up_failed">Sorry, the Sign Up Failed</string>
+    <string name="error_invalid_credentials">Invalid username/password.</string>
 </resources>
