Modal view is shown with the guides for the search location and can be expanded if necessary

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="error_invalid_credentials">Invalid username/password.</string>
     <string name="delete_media">delete media</string>
     <string name="search">Search..</string>
+    <string name="no_guide_added">No guide has been added \n click the Add button</string>
 </resources>
