--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="get_photo">Get photo</string>
     <string name="change_profile_photo">Change Profile Photo</string>
+    <string name="add_media">Add Media</string>
 </resources>
