Alert dialog is added to confirm if user want to unfollow a location.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="get_photo">Get photo</string>
     <string name="change_profile_photo">Change Profile Photo</string>
     <string name="add_media">Add Media</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
