Can search for guides in LocationGuideFragment view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="add_media">Add Media</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
+    <string name="follow">Follow</string>
+    <string name="following">Following</string>
 </resources>
