Top Locations show on Login User can tape on Top Locations to navigate to it on the map. Fixed navigation error with Showing the LocationGuideFragment.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,5 +55,6 @@
     <string name="guides">Guides</string>
     <string name="add">Add</string>
     <string name="profile">Profile</string>
-    <string name="top_guides">Top Guides</string>
+    <string name="top_locations">Top Locations</string>
+    <string name="dismiss">dismiss</string>
 </resources>
