--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,5 @@
     <string name="profile">Profile</string>
     <string name="top_locations">Top Locations</string>
     <string name="dismiss">dismiss</string>
+    <string name="recommended_locations">Recommended Locations</string>
 </resources>
