--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="top_locations">Top Locations</string>
     <string name="dismiss">dismiss</string>
     <string name="recommended_locations">Recommended Locations</string>
+    <string name="location">Location</string>
 </resources>
