Added custom Location Button MyLocation Button is animated when app opens and when modal fragment is sliding.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,4 +61,5 @@
     <string name="location">Location</string>
     <string name="logo">logo</string>
     <string name="username">Username</string>
+    <string name="home_button">Home Button</string>
 </resources>
