--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,25 +25,12 @@
     <string name="empty_fields">Fields are empty</string>
     <string name="sign_up_failed">Sorry, the Sign Up Failed</string>
     <string name="error_invalid_credentials">Invalid username/password.</string>
+
     <string name="delete_media">delete media</string>
     <string name="search">Where are you going?</string>
     <string name="no_guide_added">No guide has been added \nclick the Add button</string>
     <string name="profile_icon">Profile Icon</string>
     <string name="log_out">Log Out</string>
-    <!-- Preference Titles -->
-    <string name="messages_header">Messages</string>
-    <string name="sync_header">Sync</string>
-
-    <!-- Messages Preferences -->
-    <string name="signature_title">Your signature</string>
-    <string name="reply_title">Default reply action</string>
-
-    <!-- Sync Preferences -->
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="get_photo">Get photo</string>
     <string name="change_profile_photo">Change Profile Photo</string>
     <string name="add_media">Add Media</string>
@@ -62,4 +49,7 @@
     <string name="logo">logo</string>
     <string name="username">Username</string>
     <string name="home_button">Home Button</string>
+
+    <string name="map_id">dbd558b54f9005ee</string>
+
 </resources>
